--- a/locales/en.json
+++ b/locales/en.json
@@ -119,7 +119,8 @@
     "slots": "Slots games",
     "roulette": "Roulette",
     "table": "Table Games",
-    "card": "Card games"
+    "card": "Card games",
+    "recent": "Recent games"
   },
   "footer": {
     "text": {
