--- a/locales/en.json
+++ b/locales/en.json
@@ -197,7 +197,8 @@
     "filteredBy": "Filtered by",
     "allStatuses": "All statuses",
     "allCurrencies": "All currencies",
-    "until": "Until"
+    "until": "Until",
+    "dataPlaceholder": "DD.MM.YYYY"
   },
   "cabinet": {
     "pages": {
