nine-428 promotion -> promotionS

--- a/locales/en.json
+++ b/locales/en.json
@@ -102,7 +102,7 @@
   "pages": {
     "lobby": "Lobby",
     "myAccount": "My account",
-    "promotion": "Promotion",
+    "promotion": "Promotions",
     "aboutUs": "About us",
     "faq": "FAQ",
     "btc": "About BTC",
