--- a/locales/cs.json
+++ b/locales/cs.json
@@ -116,7 +116,8 @@
     "roulette" : "Ruleta",
     "table" : "Stolní hry",
     "card" : "Karetní hry",
-    "recent": "Nedávné hry"
+    "recent": "Nedávné hry",
+    "new": "Nový hry"
   },
   "footer" : {
     "text" : {
